--- a/sass/componentes/_estadisticas.scss
+++ b/sass/componentes/_estadisticas.scss
@@ -25,7 +25,6 @@
 .estadistica--articulos {
 	height: 70px;
 	padding: 20px;
-	border-top: 1px solid #E9E9E9;
 	
 	ul {
 		display: flex;
@@ -35,9 +34,32 @@
 	}
 		li {
 			list-style: none;
-			color: get-opacity($color-primario, .20);
+			color: $color-primario;
 		}
 			span  {
 			margin-left: 10px;
 		}
 	}
+
+.caja--con-fondo__stats{
+	margin: 0 auto;
+	position: absolute;
+	bottom: 10px;
+	border-top: none;
+	text-align: center;
+
+	ul{
+		display: flex;
+	}
+	li{
+		display: flex;
+		margin-right: 50px;
+		opacity: .8;
+	}
+	i{
+		color: $color-claro;
+	}
+	span{
+		color: $color-claro;
+	}
+}
