--- a/sass/componentes/_globales.scss
+++ b/sass/componentes/_globales.scss
@@ -8,10 +8,13 @@
 //Variables
 $Fuente1: 'Lato', sans-serif;
 $Fuente2: 'Oswald', sans-serif;
-$color-primario: #333333;
-$color-secundario: #8841DA;
-$color-variacion: #3f579a;
+$color-primario: #aba9a9;
+$color-secundario: #ef596f;
+$color-variacion: #ea5b5b;
 $color-claro: #FFF;
+
+$vrDark-bg: #21252b;
+$dark-bg: #282c34;
 
 //Mixins
 @mixin caja {
@@ -20,13 +23,24 @@ $color-claro: #FFF;
 }
 
 @mixin titulos($fuente) {
-	@if $fuente ==$Fuente1 {
+	@if $fuente == $Fuente1 {
 		font-family: $Fuente1;
 	} @else {
 		font-family: $Fuente2;
 		text-transform: uppercase;
 		font-weight: 700;
 	}
+}
+
+@function calculateRem($size){
+	$remSize: $size / 16px;
+	@return $remSize * 1rem;
+}
+
+@mixin font-size($size) {
+	font-size: $size;
+	font-size: calculateRem($size);
+	line-height: calculateRem($size)*1.5;
 }
 
 
@@ -45,9 +59,10 @@ $color-claro: #FFF;
 
 body {
 	margin: 0;
-	background-color: #F9FAFC;
+	background-color: $dark-bg;
 	color: $color-primario;
 	@include titulos($Fuente1);
+	@include font-size(18px);
 }
 
 main {
