--- a/sass/componentes/_intros.scss
+++ b/sass/componentes/_intros.scss
@@ -4,6 +4,7 @@
 	padding: 10px;
 	margin: 0 auto;
 	position: relative;
+	background-color: $color-secundario;
 	@include caja;
 	&__imagen {
 		width: 1320px;
@@ -30,6 +31,7 @@
 	}
 	&__titulo {
 		font-size: 50px;
+		line-height: 65px;
 	}
 
 	&__autor {
