--- a/sass/platzi-games.scss
+++ b/sass/platzi-games.scss
@@ -1,3 +1,4 @@
+@import "componentes/breakpoints.scss";
 @import "componentes/bootstrap_reboot";
 @import "componentes/globales.scss";
 @import "componentes/perfiles.scss";
@@ -9,3 +10,9 @@
 @import "componentes/cajas.scss";
 @import "componentes/buscadores.scss";
 @import "componentes/filtros.scss";
+@import "componentes/headers.scss";
+@import "componentes/footers.scss";
+@import "componentes/grids.scss";
+@import "componentes/homepages.scss";
+@import "componentes/sidebars.scss";
+@import "componentes/banners.scss";
